# STM32F303CMake

./: .gitignore  CMakeLists.txt  Makefile  ProjectFiles.cmake  README.md  build.ps1  configure.ps1
Core/Src/: main.c  stm32f3xx_hal_msp.c
